--- a/public/css/Component/Admin/Admin_Announcements.css
+++ b/public/css/Component/Admin/Admin_Announcements.css
@@ -20,13 +20,14 @@
     .main-right-top {
         display: flex;
         flex-direction: column;
+
     }
 
     .main-right-top-one {
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: space-around;
+        justify-content: end;
         border: 10px;
         width: 100%;
         box-sizing: border-box;
@@ -35,47 +36,6 @@
         background-color: var(--background-color-main);
         z-index: 1;
     }
-
-    .main-right-top-search {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 35%;
-        position: relative;
-    }
-
-    .main-right-top-search i {
-        position: absolute;
-        font-size: 25px;
-        left: 10px;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-
-    .main-right-top-search input {
-        width: 100%;
-        height: 33px;
-        border-radius: 7px;
-        background-color: var(--background-color-two);
-        border: 1px solid #dcdde1;
-        font-size: 14px;
-        padding-left: 40px;
-        letter-spacing: 0.03rem;
-        color: var(--main-text-color);
-    }
-
-    .main-right-top-search input:focus {
-        border: 1px solid #1ca557;
-        outline: none;
-    }
-
-    .main-right-top-notification {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-left: 30%;
-    }
-
 
     .main-right-top-profile {
         display: flex;
@@ -278,7 +238,6 @@
             font-size: 15px;
             margin: 10px 0px 15px 0px;
             letter-spacing: 0.03rem;
-
         }
 
         .cont img {
@@ -299,6 +258,7 @@
             text-align: left;
             box-shadow: var(--box-shadow2);
             height: 375px;
+            overflow: scroll !important;
             width: 100%;
             margin-top: 62px;
             line-height: 1.2rem;
@@ -348,8 +308,6 @@
         color: var(--main-text-color);
         transition: transform 0.4s, top 0.4s;
     }
-
-
 
     .delete .popup a {
         width: auto;
@@ -414,4 +372,163 @@
         box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
     }
 
+    @media screen and (max-width: 1040px) {
+
+
+        .main-right-bottom {
+
+            .cont h2 {
+                font-size: 18px;
+                letter-spacing: 0.01rem;
+
+            }
+
+            .cont p {
+                font-size: 14px;
+            }
+
+
+        }
+    }
+
+    @media screen and (max-width: 900px) {
+
+
+        .main-right-bottom .cont {
+            height: auto;
+        }
+
+        .main-right-bottom {
+            .cont {
+                padding: 30px;
+                box-sizing: border-box;
+                display: flex;
+                flex-direction: column;
+            }
+        }
+    }
+
+    @media screen and (max-width:640px) {
+
+        .add {
+            .cont {
+                width: 400px;
+
+            }
+
+            img {
+                width: 20px;
+                height: 20px;
+                margin-left: 99%;
+                margin-top: -10px;
+                cursor: pointer;
+            }
+
+            h1 {
+                font-size: 26px;
+            }
+
+            .camera {
+                width: 100px;
+                height: 100px;
+                margin-left: 0px;
+                cursor: pointer;
+                box-shadow: var(--background-color-main);
+                margin-top: 30px;
+            }
+
+            .input-cont {
+                margin-bottom: 10px;
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                flex-direction: column;
+            }
+
+            p {
+                margin-bottom: 5px;
+                font-size: 15px;
+            }
+
+            input {
+                padding: 7px;
+                width: 98%;
+                background-color: #f7f9fc;
+                border-radius: 5px;
+                border: none;
+                text-align: left;
+                outline: none;
+            }
+
+            .text {
+                padding: 10px;
+                width: 97%;
+                height: 70px;
+                background-color: #f7f9fc;
+                border-radius: 5px;
+                border: none;
+                resize: vertical;
+                text-align: left;
+                outline: none;
+                word-wrap: break-word;
+            }
+
+
+            button {
+                background-color: var(--green-color-one);
+                border: none;
+                border-radius: 10px;
+                width: 100%;
+                height: 38px;
+                font-size: 15px;
+                color: var(--background-color-main);
+                cursor: pointer;
+                letter-spacing: 0.03rem;
+                font-weight: bolder;
+                transition: background-color 0.3s ease-in;
+                margin-top: 10px;
+            }
+        }
+    }
+
+    @media screen and (max-width:488px) {
+
+
+        .delete .popup {
+            width: 300px;
+        }
+
+        .delete .deletebtn {
+            width: 100px;
+            font-size: 15px;
+
+        }
+
+        .delete .cancelbtn {
+            width: 100px;
+            font-size: 15px;
+        }
+
+        .delete_confirm .popup h2 {
+            font-size: 18px !important;
+
+        }
+
+        .main-right-top-two button {
+            padding: 7px 28px;
+            font-size: 14px;
+        }
+
+        .add {
+
+            h1 {
+                font-size: 21px;
+            }
+
+            p {
+                font-size: 14px;
+            }
+
+        }
+    }
 }
