--- a/public/css/Component/Admin/Admin_Customer_Complains.css
+++ b/public/css/Component/Admin/Admin_Customer_Complains.css
@@ -66,8 +66,6 @@
 
     .personal-details-popup-box.active {
         transform: translate(-50%, -50%) scale(1);
-
-
     }
 
     .personal-details-popup-form {
@@ -96,6 +94,7 @@
         right: 10px;
         width: 20px;
         height: 20px;
+        cursor: pointer;
     }
 
     .personal-details-popup {
@@ -106,14 +105,14 @@
         height: 100%;
         padding-top: 10px;
         margin-top: 17px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        box-shadow: var(--box-shadow);
+        border-radius: 6px;
     }
 
     .personal-details-right {
         margin-left: 40px;
         display: grid;
         grid-template-columns: 40% 60%;
-
     }
 
     .personal-details-right-labels {
@@ -127,11 +126,9 @@
 
     .personal-details-right-labels span {
         margin-bottom: 15px;
-        font-size: 15px;
+        font-size: 14px;
         color: #7c7c7d;
-
     }
-
 
     .personal-details-right-values {
         display: flex;
@@ -140,15 +137,13 @@
         align-items: flex-start;
         padding-top: 2px;
         padding-left: 32px;
-
     }
 
     .personal-details-right-values span {
         margin-bottom: 15px;
-        font-size: 15px;
+        font-size: 14px;
         color: #767e95;
         font-weight: 550;
-
     }
 
     .personal-details-left {
@@ -172,7 +167,7 @@
 
     .personal-details-left p {
         margin-top: 5px;
-        font-size: 15px;
+        font-size: 14px;
         color: #7c7c7d;
     }
 
@@ -216,14 +211,13 @@
     }
 
     .personal-details-bottom-one h2 {
-        font-size: 15px;
+        font-size: 14px;
         color: #767e95;
         font-weight: 550;
-        margin-top: 1px;
     }
 
     .personal-details-bottom-two h2 {
-        font-size: 15px;
+        font-size: 14px;
         color: #767e95;
         font-weight: 550;
         margin-top: 1px;
@@ -235,21 +229,21 @@
         padding: 1px;
         border: 1px solid #ccc;
         border-radius: 5px;
-        margin-left: 60px;
-        width: 510px;
-        box-shadow: 0 0px 2px rgba(0, 0, 0, 0.1);
-        background-color: #fafafa;
+        margin-left: 62px;
+        width: 535px;
+        box-shadow: var(--box-shadow);
+        background-color: var(--background-color-main);
 
     }
 
     .subject-complain {
         text-align: left;
-        margin-left: 30px;
+        margin-left: 5px;
     }
 
     .personal-details-bottom span {
         margin-bottom: 15px;
-        font-size: 15px;
+        font-size: 14px;
         color: #7c7c7d;
         overflow: scroll;
 
@@ -307,6 +301,79 @@
             font-size: 12px !important;
         }
 
+        .personal-details-popup-form {
+            width: 450px;
+        }
+
+        .subject-complain-box {
+            margin-left: 30px;
+            width: 325px;
+        }
+
+        .personal-details-right-labels span {
+            font-size: 12px;
+            text-align: left;
+        }
+
+        .personal-details-right-values span {
+            font-size: 12px;
+            text-align: left;
+        }
+
+        .personal-details-bottom-one h2 {
+            font-size: 12px;
+        }
+
+        .personal-details-bottom-two h2 {
+            font-size: 12px;
+        }
+
+        .personal-details-bottom span {
+            font-size: 12px;
+        }
+
+
+    }
+
+    @media screen and (max-width: 452px) {
+        .personal-details-popup-form {
+            width: 375px;
+        }
+
+        .personal-details-left img {
+            width: 75px;
+            height: 75px;
+            border-radius: 50%;
+            overflow: hidden;
+            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .subject-complain-box {
+            margin-left: 30px;
+            width: 275px;
+        }
+
+        .personal-details-right-labels span {
+            font-size: 11px;
+            text-align: left;
+        }
+
+        .personal-details-right-values span {
+            font-size: 11px;
+            text-align: left;
+        }
+
+        .personal-details-bottom-one h2 {
+            font-size: 11px;
+        }
+
+        .personal-details-bottom-two h2 {
+            font-size: 11px;
+        }
+
+        .personal-details-bottom span {
+            font-size: 11px;
+        }
 
 
     }
