--- a/public/css/Component/Admin/Admin_Reports.css
+++ b/public/css/Component/Admin/Admin_Reports.css
@@ -12,7 +12,6 @@
         display: grid;
         grid-template-rows: 9% 91%;
         height: 100vh;
-        overflow: hidden;
         overflow-x: auto !important;
     }
 
@@ -35,9 +34,9 @@
     }
 
     .main-right-bottom {
-        height: auto;
-        padding-bottom: 4%;
+
         overflow-x: scroll !important;
+        overflow-y: scroll;
     }
 
     .main-right-bottom {
@@ -205,7 +204,8 @@
         .slide {
             width: 100%;
             height: 100%;
-            overflow: scroll;
+            overflow-y: auto;
+            max-height: calc(100vh - 150px);
             overflow-x: scroll !important;
         }
 
