--- a/public/css/Component/Admin/Admin_Admin_View.css
+++ b/public/css/Component/Admin/Admin_Admin_View.css
@@ -1,9 +1,18 @@
 .Admin_Admin_View {
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+
     .main-right-bottom-down {
         padding-left: 3.5%;
         width: 96.5%;
         height: 450px;
         overflow: scroll;
+    }
+
+    .main-right-top-one {
+        justify-content: space-between !important;
     }
 
     .main-right-bottom-top {
@@ -48,104 +57,57 @@
 
 
 
-    @media screen and (max-width: 1118px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 1%;
-
-        }
-
-        .table td {
-
-            font-size: 12px;
-
-        }
-
-        .table-header {
-            font-size: 14px;
-        }
-
-        .table-row img {
-            width: 20px;
-            height: 20px;
-
-        }
-
-
-
-    }
-
     @media screen and (max-width:862px) {
-        .main-right-top-one-content {
-            width: 250px;
-            margin-left: 0;
-            padding-left: 5%;
-        }
-
-        .main-right-top-one input {
-            width: 20%;
-
-        }
 
         .main-right-top-three-content p {
-            font-size: 14px;
-
+            font-size: 13px;
         }
-
 
         .line {
             width: 86px;
             height: 2px;
-
         }
 
         .table td {
-
-            font-size: 10px;
-
+            font-size: 13px;
         }
 
         .table-header {
-            font-size: 12px;
+            font-size: 13px;
         }
 
         .table-row img {
             width: 17px;
             height: 17px;
-
-        }
-
-
-    }
-
-    @media screen and (max-width: 692px) {
-
-
-        .table td {
-
-            font-size: 9px;
-
-        }
-
-        .table-header {
-            font-size: 10px;
-        }
-
-        .table-row img {
-            width: 15px;
-            height: 15px;
-
         }
 
         .main-right-bottom {
             width: 140%;
+            overflow-x: scroll !important;
         }
 
+        .main-right-bottom-top {
+            width: 140%;
 
+        }
+
+        .main-right-bottom-down {
+            width: 140%;
+
+        }
+
+        .table-header {
+            grid-template-columns: 12% 9% 21% 18% 11% 12.5%
+        }
+
+        .table-row {
+            grid-template-columns: 12% 9% 21% 18% 11% 12.5%
+        }
     }
 
 
-    
+
+
     .overlay {
         position: fixed;
         top: 0;
@@ -158,250 +120,325 @@
     }
 
 
-        /*Delete confirm popup*/
-        .delete_confirm {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.1);
-            z-index: 2;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            height: 100%;
-    
-        }
-    
-        .delete_confirm .popup {
-            width: 400px;
-            background: white;
-            border-radius: 6px;
-            top: 0;
-            text-align: center;
-            padding: 0 30px 30px;
-            color: var(--main-text-color);
-            transition: transform 0.4s, top 0.4s;
-        }
-    
-        .delete_confirm .popup a {
-            width: auto;
-        }
-    
-        .delete_confirm .open-popup {
-            visibility: visible;
-            top: 50%;
-        }
-    
-        .delete_confirm .popup img {
-            width: 100px;
-            margin-top: 35px;
-            border-radius: 50%;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-    
-        .delete_confirm .popup h2 {
-            font-size: 23px;
-            font-weight: 600;
-            margin: 10px 0 10px;
-        }
-    
-        .delete_confirm .btns {
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            justify-content: center;
-        }
-    
-        .delete_confirm .deletebtn {
-            width: 150px;
-            margin-top: 30px;
-            margin-right: 20px;
-            padding: 10px 0;
-            background: rgb(220, 39, 39);
-            color: white;
-            border: 0;
-            outline: none;
-            font-size: 18px;
-            border-radius: 4px;
-            cursor: pointer;
-            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-        }
-    
-        .delete_confirm .deletebtn:hover {
-            background: #c62323;
-            ;
-        }
-    
-        .delete_confirm .cancelbtn {
-            width: 150px;
-            margin-top: 30px;
-            padding: 10px 0;
-            background: #bab3b3;
-            color: white;
-            border: 0;
-            outline: none;
-            font-size: 18px;
-            border-radius: 4px;
-            cursor: pointer;
-            box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
-        }
-    
-        .delete_confirm .cancelbtn:hover {
-            background: #a7a1a1;
-        }
+    /*Delete confirm popup*/
+    .delete_confirm {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
 
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.1);
-            z-index: 2;
-            display: none;
-        }
-    
-        /*personal details popup*/
-        .personal-details-popup-box {
-            display: flex;
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) scale(0);
-            z-index: 4;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            overflow: hidden;
-            transition: transform 0.4s ease-in, background-color 0.4s ease-in;
-            box-shadow: var(--box-shadow);
-            border-radius: 10px;
-            background-color: var(--main-text-color);
-        }
-    
-        .personal-details-popup-box.active {
-            transform: translate(-50%, -50%) scale(1);
-    
-    
-        }
-    
-        .personal-details-popup-form {
-            box-sizing: border-box;
-            width: 700px;
-            background: var(--background-color-main);
-            border-radius: 6px;
-            top: 0;
-            position: relative;
-            text-align: center;
-            padding: 0 30px 30px 30px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            box-shadow: var(--box-shadow);
-            color: var(--main-text-color);
-    
-        }
-    
-        .personal-details-popup-form-close {
-            width: 25px;
-            height: 25px;
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            width: 20px;
-            height: 20px;
-        }
-    
-        .personal-details-popup {
-            display: grid;
-            grid-template-columns: 40% 60%;
-            width: 100%;
-            border-radius: 4px;
-            height: 100%;
-            padding-top: 10px;
-            margin-top: 17px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-    
-        .personal-details-right {
-            display: grid;
-            grid-template-columns: 30% 70%;
-    
-        }
-    
-        .personal-details-right-labels {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-            padding-top: 40px;
-            padding-bottom: 50px;
-            padding-left: 25px;
-        }
-    
-        .personal-details-right-labels span {
-            margin-bottom: 15px;
-            font-size: 15px;
-            color: #7c7c7d;
-    
-        }
-    
-    
-        .personal-details-right-values {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: flex-start;
-            padding-top: 40px;
-            padding-bottom: 50px;
-            padding-left: 32px;
-    
-        }
-    
-        .personal-details-right-values span {
-            margin-bottom: 15px;
-            font-size: 15px;
-            color: #767e95;
-            font-weight: 550;
-    
-        }
-    
-        .personal-details-left {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 10px;
-            flex-direction: column;
-    
-        }
-    
-        .personal-details-left img {
-            width: 150px;
-            height: 150px;
-            border-radius: 50%;
-            overflow: hidden;
-            margin-bottom: 8px;
-            box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-        }
-    
-        .personal-details-left p {
-            margin-top: 5px;
-            font-size: 15px;
-            color: #7c7c7d;
-        }
-    
-        .personal-details-left span {
-            color: #767e95;
-            font-weight: 550;
-    
-        }
-    
-    
-        /* .profile-pic {
+    }
+
+    .delete_confirm .popup {
+        width: 400px;
+        background: white;
+        border-radius: 6px;
+        top: 0;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: var(--main-text-color);
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .delete_confirm .popup a {
+        width: auto;
+    }
+
+    .delete_confirm .open-popup {
+        visibility: visible;
+        top: 50%;
+    }
+
+    .delete_confirm .popup img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .delete_confirm .popup h2 {
+        font-size: 23px;
+        font-weight: 600;
+        margin: 10px 0 10px;
+    }
+
+    .delete_confirm .btns {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .delete_confirm .deletebtn {
+        width: 150px;
+        margin-top: 30px;
+        margin-right: 20px;
+        padding: 10px 0;
+        background: rgb(220, 39, 39);
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .delete_confirm .deletebtn:hover {
+        background: #c62323;
+        ;
+    }
+
+    .delete_confirm .cancelbtn {
+        width: 150px;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: #bab3b3;
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .delete_confirm .cancelbtn:hover {
+        background: #a7a1a1;
+    }
+
+    /*Success popup*/
+    .center_manager_success {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+    }
+
+    .btn {
+        padding: 10px 60px;
+        background: white;
+        border: 0;
+        outline: none;
+        cursor: pointer;
+        font-size: 22px;
+        font-weight: 500;
+        border-radius: 30px;
+    }
+
+    .popup {
+        width: 400px;
+        background: white;
+        font-family: 'poppins', sans-serif;
+        border-radius: 6px;
+        text-align: center;
+        padding: 0 30px 30px;
+        color: #333;
+        transition: transform 0.4s, top 0.4s;
+    }
+
+    .open-popup {
+        visibility: visible;
+        top: 50%;
+        transform: translate(-50%, -50%) scale(1);
+    }
+
+    .popup img {
+        width: 100px;
+        margin-top: 35px;
+        border-radius: 50%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup h2 {
+        font-size: 38px;
+        font-weight: 500;
+        margin: 10px 0 10px;
+    }
+
+    .popup button {
+        width: 100%;
+        margin-top: 30px;
+        padding: 10px 0;
+        background: var(--green-color-one);
+        color: white;
+        border: 0;
+        outline: none;
+        font-size: 18px;
+        border-radius: 4px;
+        cursor: pointer;
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .popup button:hover {
+        background: var(--button-hover-green);
+    }
+
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.1);
+        z-index: 2;
+        display: none;
+    }
+
+    /*personal details popup*/
+    .personal-details-popup-box {
+        display: flex;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0);
+        z-index: 4;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        overflow: hidden;
+        transition: transform 0.4s ease-in, background-color 0.4s ease-in;
+        box-shadow: var(--box-shadow);
+        border-radius: 10px;
+        background-color: var(--main-text-color);
+    }
+
+    .personal-details-popup-box.active {
+        transform: translate(-50%, -50%) scale(1);
+
+
+    }
+
+    .personal-details-popup-form {
+        box-sizing: border-box;
+        width: 700px;
+        background: var(--background-color-main);
+        border-radius: 6px;
+        top: 0;
+        position: relative;
+        text-align: center;
+        padding: 0 30px 30px 30px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        box-shadow: var(--box-shadow);
+        color: var(--main-text-color);
+
+    }
+
+    .personal-details-popup-form-close {
+        width: 25px;
+        height: 25px;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        width: 20px;
+        height: 20px;
+    }
+
+    .personal-details-popup {
+        display: grid;
+        grid-template-columns: 40% 60%;
+        width: 100%;
+        border-radius: 4px;
+        height: 100%;
+        padding-top: 10px;
+        margin-top: 17px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .personal-details-right {
+        display: grid;
+        grid-template-columns: 30% 70%;
+
+    }
+
+    .personal-details-right-labels {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 40px;
+        padding-bottom: 50px;
+        padding-left: 25px;
+    }
+
+    .personal-details-right-labels span {
+        margin-bottom: 15px;
+        font-size: 15px;
+        color: #7c7c7d;
+
+    }
+
+
+    .personal-details-right-values {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        padding-top: 40px;
+        padding-bottom: 50px;
+        padding-left: 32px;
+
+    }
+
+    .personal-details-right-values span {
+        margin-bottom: 15px;
+        font-size: 15px;
+        color: #767e95;
+        font-weight: 550;
+
+    }
+
+    .personal-details-left {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 10px;
+        flex-direction: column;
+
+    }
+
+    .personal-details-left img {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-bottom: 8px;
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    }
+
+    .personal-details-left p {
+        margin-top: 5px;
+        font-size: 15px;
+        color: #7c7c7d;
+    }
+
+    .personal-details-left span {
+        color: #767e95;
+        font-weight: 550;
+
+    }
+
+
+    /* .profile-pic {
             width: 70%;
             height: auto;
             border-radius: 50%;
@@ -410,25 +447,25 @@
             box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
     
         } */
-    
-        .personal-details-topic {
-            font-size: 18px;
-            font-weight: 500;
-            position: relative;
-            margin-inline-end: auto;
-            margin-top: 15px;
-    
-        }
-    
-        .personal-details-topic::before {
-            content: '';
-            position: absolute;
-            margin-top: 23px;
-            margin-left: 45px;
-            margin-bottom: 15px;
-            height: 3px;
-            width: 45px;
-            background: var(--green-color-one);
-    
-        }
+
+    .personal-details-topic {
+        font-size: 18px;
+        font-weight: 500;
+        position: relative;
+        margin-inline-end: auto;
+        margin-top: 15px;
+
+    }
+
+    .personal-details-topic::before {
+        content: '';
+        position: absolute;
+        margin-top: 23px;
+        margin-left: 45px;
+        margin-bottom: 15px;
+        height: 3px;
+        width: 45px;
+        background: var(--green-color-one);
+
+    }
 }
